//Metody a konstruktory